--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -14,7 +14,16 @@
 <script>
   $(function() {
       $.get("/tasks").success ( function ( data ) {
-          console.log(data);
+          var htmlString = "";
+          $.each(data, function(index, task) {
+              var liElement = '<li><div class="view"><input class="toggle" type="checkbox"><label>' +
+                task.title +
+                '</label></div></li>';
+                htmlString += liElement;
+
+            });
+            var ulTodos = $('.todo-list');    
+            ulTodos.html(htmlString);
       });
   });
 </script>
