--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -16,19 +16,7 @@
 
 <script>
   $(function() {
-      $('#new-form').submit(function(event) {
-          event.preventDefault();
-          var textbox = $('.new-todo');
-          var payload = {
-              task: {
-                  title: textbox.val()
-              }
-          };
-          $.post("/tasks", payload).success(function(date){
-              console.log("Success Request");
-          });
-      });
-
+     
 
 
       function taskHtml(task) {
@@ -68,5 +56,23 @@
 
             $('.toggle').change(toggleTask);
       });
+
+      $('#new-form').submit(function(event) {
+          event.preventDefault();
+          var textbox = $('.new-todo');
+          var payload = {
+              task: {
+                  title: textbox.val()
+              }
+          };
+          $.post("/tasks", payload).success(function(data){
+              var htmlString = taskHtml(data);
+              var ulTodos = $('.todo-list');
+              ulTodos.append(htmlString);
+              $('.toggle').click(toggleTask);
+          });
+      });
+
+
   });
 </script>
